// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`should render SearchPublishersTree correctly with active filter 1`] = `
<div
  className="search-filter-publisher"
>
  <div
    className="fdk-panel__header"
  >
    <button
      className="fdk-publisher-toggle fdk-p-0"
      onClick={[Function]}
    >
      <i
        className="fa mr-2 fa-angle-up"
      />
      <span>
        title
      </span>
    </button>
  </div>
  <Collapse
    appear={false}
    enter={true}
    exit={true}
    in={false}
    isOpen={true}
    mountOnEnter={false}
    onEnter={[Function]}
    onEntered={[Function]}
    onEntering={[Function]}
    onExit={[Function]}
    onExited={[Function]}
    onExiting={[Function]}
    tag="div"
    timeout={350}
    unmountOnExit={false}
  >
    <div
      className="fdk-panel__content"
    >
      <div
        className="fdk-items-list"
      >
        <div>
          <div
            className="section"
            key="panel0"
          >
            <TreeView
              defaultCollapsed={true}
              itemClassName="tree-view_main"
              key="/STAT|0"
              nodeLabel={
                <FilterOption
                  active={true}
                  count={91}
                  displayClass="inline-block"
                  itemKey={0.5}
                  label="Central authority"
                  labelRaw={null}
                  onClick={[MockFunction]}
                  themesItems={null}
                  value="/STAT"
                />
              }
            >
              <TreeView
                defaultCollapsed={true}
                itemClassName=""
                key="/STAT/972417807|0"
                nodeLabel={
                  <FilterOption
                    active={false}
                    count={37}
                    displayClass="inline-block"
                    itemKey={0.5}
                    label={null}
                    labelRaw="Finansdepartementet"
                    onClick={[MockFunction]}
                    themesItems={null}
                    value="/STAT/972417807"
                  />
                }
              >
                <FilterOption
                  active={false}
                  count={36}
                  displayClass=""
                  itemKey={0.5}
                  key="/STAT/972417807/974761076|0"
                  label={null}
                  labelRaw="Skatteetaten"
                  onClick={[MockFunction]}
                  themesItems={null}
                  value="/STAT/972417807/974761076"
                />
                <FilterOption
                  active={false}
                  count={1}
                  displayClass=""
                  itemKey={0.5}
                  key="/STAT/972417807/971526920|1"
                  label={null}
                  labelRaw="Ssb"
                  onClick={[MockFunction]}
                  themesItems={null}
                  value="/STAT/972417807/971526920"
                />
              </TreeView>
              <TreeView
                defaultCollapsed={true}
                itemClassName=""
                key="/STAT/912660680|1"
                nodeLabel={
                  <FilterOption
                    active={false}
                    count={28}
                    displayClass="inline-block"
                    itemKey={0.5}
                    label={null}
                    labelRaw="Nærings- og fiskeridepartementet"
                    onClick={[MockFunction]}
                    themesItems={null}
                    value="/STAT/912660680"
                  />
                }
              >
                <FilterOption
                  active={false}
                  count={27}
                  displayClass=""
                  itemKey={0.5}
                  key="/STAT/912660680/974760673|0"
                  label={null}
                  labelRaw="Brønnøysundregistrene"
                  onClick={[MockFunction]}
                  themesItems={null}
                  value="/STAT/912660680/974760673"
                />
                <FilterOption
                  active={false}
                  count={1}
                  displayClass=""
                  itemKey={0.5}
                  key="/STAT/912660680/971526157|1"
                  label={null}
                  labelRaw="Patentstyret"
                  onClick={[MockFunction]}
                  themesItems={null}
                  value="/STAT/912660680/971526157"
                />
              </TreeView>
              <TreeView
                defaultCollapsed={true}
                itemClassName=""
                key="/STAT/872417842|2"
                nodeLabel={
                  <FilterOption
                    active={false}
                    count={9}
                    displayClass="inline-block"
                    itemKey={0.5}
                    label={null}
                    labelRaw="Kunnskapsdepartementet"
                    onClick={[MockFunction]}
                    themesItems={null}
                    value="/STAT/872417842"
                  />
                }
              >
                <FilterOption
                  active={false}
                  count={8}
                  displayClass=""
                  itemKey={0.5}
                  key="/STAT/872417842/960885406|0"
                  label={null}
                  labelRaw="Statens lånekasse for utdanning"
                  onClick={[MockFunction]}
                  themesItems={null}
                  value="/STAT/872417842/960885406"
                />
                <FilterOption
                  active={false}
                  count={1}
                  displayClass=""
                  itemKey={0.5}
                  key="/STAT/872417842/970018131|1"
                  label={null}
                  labelRaw="Utdanningsdirektoratet"
                  onClick={[MockFunction]}
                  themesItems={null}
                  value="/STAT/872417842/970018131"
                />
              </TreeView>
              <TreeView
                defaultCollapsed={true}
                itemClassName=""
                key="/STAT/983887406|3"
                nodeLabel={
                  <FilterOption
                    active={false}
                    count={9}
                    displayClass="inline-block"
                    itemKey={0.5}
                    label={null}
                    labelRaw="Helse- og omsorgsdepartementet"
                    onClick={[MockFunction]}
                    themesItems={null}
                    value="/STAT/983887406"
                  />
                }
              >
                <FilterOption
                  active={false}
                  count={8}
                  displayClass=""
                  itemKey={0.5}
                  key="/STAT/983887406/915933149|0"
                  label={null}
                  labelRaw="Direktoratet for e-helse"
                  onClick={[MockFunction]}
                  themesItems={null}
                  value="/STAT/983887406/915933149"
                />
                <FilterOption
                  active={false}
                  count={1}
                  displayClass=""
                  itemKey={0.5}
                  key="/STAT/983887406/983544622|1"
                  label={null}
                  labelRaw="Helsedirektoratet"
                  onClick={[MockFunction]}
                  themesItems={null}
                  value="/STAT/983887406/983544622"
                />
              </TreeView>
              <TreeView
                defaultCollapsed={true}
                itemClassName=""
                key="/STAT/983887457|4"
                nodeLabel={
                  <FilterOption
                    active={false}
                    count={4}
                    displayClass="inline-block"
                    itemKey={0.5}
                    label={null}
                    labelRaw="Arbeids- og sosialdepartementet"
                    onClick={[MockFunction]}
                    themesItems={null}
                    value="/STAT/983887457"
                  />
                }
              >
                <FilterOption
                  active={false}
                  count={4}
                  displayClass=""
                  itemKey={0.5}
                  key="/STAT/983887457/889640782|0"
                  label={null}
                  labelRaw="Nav"
                  onClick={[MockFunction]}
                  themesItems={null}
                  value="/STAT/983887457/889640782"
                />
              </TreeView>
              <TreeView
                defaultCollapsed={true}
                itemClassName=""
                key="/STAT/972417874|5"
                nodeLabel={
                  <FilterOption
                    active={false}
                    count={2}
                    displayClass="inline-block"
                    itemKey={0.5}
                    label={null}
                    labelRaw="Landbruks- og matdepartementet"
                    onClick={[MockFunction]}
                    themesItems={null}
                    value="/STAT/972417874"
                  />
                }
              >
                <FilterOption
                  active={false}
                  count={2}
                  displayClass=""
                  itemKey={0.5}
                  key="/STAT/972417874/985399077|0"
                  label={null}
                  labelRaw="Mattilsynet"
                  onClick={[MockFunction]}
                  themesItems={null}
                  value="/STAT/972417874/985399077"
                />
              </TreeView>
              <TreeView
                defaultCollapsed={true}
                itemClassName=""
                key="/STAT/972417858|6"
                nodeLabel={
                  <FilterOption
                    active={false}
                    count={1}
                    displayClass="inline-block"
                    itemKey={0.5}
                    label={null}
                    labelRaw="Kommunal- og moderniserings- departementet"
                    onClick={[MockFunction]}
                    themesItems={null}
                    value="/STAT/972417858"
                  />
                }
              >
                <FilterOption
                  active={false}
                  count={1}
                  displayClass=""
                  itemKey={0.5}
                  key="/STAT/972417858/991825827|0"
                  label={null}
                  labelRaw="Difi"
                  onClick={[MockFunction]}
                  themesItems={null}
                  value="/STAT/972417858/991825827"
                />
              </TreeView>
              <TreeView
                defaultCollapsed={true}
                itemClassName=""
                key="/STAT/972417866|7"
                nodeLabel={
                  <FilterOption
                    active={false}
                    count={1}
                    displayClass="inline-block"
                    itemKey={0.5}
                    label={null}
                    labelRaw="Kulturdepartementet"
                    onClick={[MockFunction]}
                    themesItems={null}
                    value="/STAT/972417866"
                  />
                }
              >
                <FilterOption
                  active={false}
                  count={1}
                  displayClass=""
                  itemKey={0.5}
                  key="/STAT/972417866/961181399|0"
                  label={null}
                  labelRaw="Arkivverket"
                  onClick={[MockFunction]}
                  themesItems={null}
                  value="/STAT/972417866/961181399"
                />
              </TreeView>
            </TreeView>
          </div>
          <div
            className="section"
            key="panel1"
          >
            <TreeView
              defaultCollapsed={true}
              itemClassName="tree-view_main"
              key="/KOMMUNE|1"
              nodeLabel={
                <FilterOption
                  active={false}
                  count={37}
                  displayClass="inline-block"
                  itemKey={0.5}
                  label="Municipality"
                  labelRaw={null}
                  onClick={[MockFunction]}
                  themesItems={null}
                  value="/KOMMUNE"
                />
              }
            >
              <TreeView
                defaultCollapsed={true}
                itemClassName=""
                key="/KOMMUNE/958935420|0"
                nodeLabel={
                  <FilterOption
                    active={false}
                    count={37}
                    displayClass="inline-block"
                    itemKey={0.5}
                    label={null}
                    labelRaw="Oslo kommune"
                    onClick={[MockFunction]}
                    themesItems={null}
                    value="/KOMMUNE/958935420"
                  />
                }
              >
                <TreeView
                  defaultCollapsed={true}
                  itemClassName=""
                  key="/KOMMUNE/958935420/974770482|0"
                  nodeLabel={
                    <FilterOption
                      active={false}
                      count={22}
                      displayClass="inline-block"
                      itemKey={0.5}
                      label={null}
                      labelRaw="Oslo kommune byrådsavdeling for byutvikling"
                      onClick={[MockFunction]}
                      themesItems={null}
                      value="/KOMMUNE/958935420/974770482"
                    />
                  }
                >
                  <FilterOption
                    active={false}
                    count={22}
                    displayClass=""
                    itemKey={0.5}
                    key="/KOMMUNE/958935420/974770482/971040823|0"
                    label={null}
                    labelRaw="Oslo kommune plan- og bygningsetaten"
                    onClick={[MockFunction]}
                    themesItems={null}
                    value="/KOMMUNE/958935420/974770482/971040823"
                  />
                </TreeView>
                <TreeView
                  defaultCollapsed={true}
                  itemClassName=""
                  key="/KOMMUNE/958935420/974770474|1"
                  nodeLabel={
                    <FilterOption
                      active={false}
                      count={10}
                      displayClass="inline-block"
                      itemKey={0.5}
                      label={null}
                      labelRaw="Oslo kommune byrådsavdeling for miljø og samferdsel"
                      onClick={[MockFunction]}
                      themesItems={null}
                      value="/KOMMUNE/958935420/974770474"
                    />
                  }
                >
                  <FilterOption
                    active={false}
                    count={8}
                    displayClass=""
                    itemKey={0.5}
                    key="/KOMMUNE/958935420/974770474/996922766|0"
                    label={null}
                    labelRaw="Oslo kommune bymiljøetaten"
                    onClick={[MockFunction]}
                    themesItems={null}
                    value="/KOMMUNE/958935420/974770474/996922766"
                  />
                  <FilterOption
                    active={false}
                    count={2}
                    displayClass=""
                    itemKey={0.5}
                    key="/KOMMUNE/958935420/974770474/976820088|1"
                    label={null}
                    labelRaw="Oslo kommune renovasjonsetaten"
                    onClick={[MockFunction]}
                    themesItems={null}
                    value="/KOMMUNE/958935420/974770474/976820088"
                  />
                </TreeView>
              </TreeView>
            </TreeView>
          </div>
          <div
            className="section"
            key="panel2"
          >
            <TreeView
              defaultCollapsed={true}
              itemClassName="tree-view_main"
              key="/PRIVAT|2"
              nodeLabel={
                <FilterOption
                  active={false}
                  count={2}
                  displayClass="inline-block"
                  itemKey={0.5}
                  label="/PRIVAT"
                  labelRaw={null}
                  onClick={[MockFunction]}
                  themesItems={null}
                  value="/PRIVAT"
                />
              }
            >
              <FilterOption
                active={false}
                count={1}
                displayClass=""
                itemKey={0.5}
                key="/PRIVAT/985821585|0"
                label={null}
                labelRaw="Uninett norid as"
                onClick={[MockFunction]}
                themesItems={null}
                value="/PRIVAT/985821585"
              />
              <FilterOption
                active={false}
                count={1}
                displayClass=""
                itemKey={0.5}
                key="/PRIVAT/991609407|1"
                label={null}
                labelRaw="Ruter as"
                onClick={[MockFunction]}
                themesItems={null}
                value="/PRIVAT/991609407"
              />
            </TreeView>
          </div>
          <div
            className="section"
            key="panel3"
          >
            <TreeView
              defaultCollapsed={true}
              itemClassName="tree-view_main"
              key="/ANNET|3"
              nodeLabel={
                <FilterOption
                  active={false}
                  count={1}
                  displayClass="inline-block"
                  itemKey={0.5}
                  label="Other"
                  labelRaw={null}
                  onClick={[MockFunction]}
                  themesItems={null}
                  value="/ANNET"
                />
              }
            >
              <FilterOption
                active={false}
                count={1}
                displayClass=""
                itemKey={0.5}
                key="/ANNET/910244132|0"
                label={null}
                labelRaw="Ramsund og rognan revisjon"
                onClick={[MockFunction]}
                themesItems={null}
                value="/ANNET/910244132"
              />
            </TreeView>
          </div>
        </div>
      </div>
    </div>
  </Collapse>
</div>
`;

exports[`should render SearchPublishersTree correctly with active sub filter 1`] = `
<div
  className="search-filter-publisher"
>
  <div
    className="fdk-panel__header"
  >
    <button
      className="fdk-publisher-toggle fdk-p-0"
      onClick={[Function]}
    >
      <i
        className="fa mr-2 fa-angle-up"
      />
      <span>
        title
      </span>
    </button>
  </div>
  <Collapse
    appear={false}
    enter={true}
    exit={true}
    in={false}
    isOpen={true}
    mountOnEnter={false}
    onEnter={[Function]}
    onEntered={[Function]}
    onEntering={[Function]}
    onExit={[Function]}
    onExited={[Function]}
    onExiting={[Function]}
    tag="div"
    timeout={350}
    unmountOnExit={false}
  >
    <div
      className="fdk-panel__content"
    >
      <div
        className="fdk-items-list"
      >
        <div>
          <div
            className="section"
            key="panel0"
          >
            <TreeView
              defaultCollapsed={true}
              itemClassName="tree-view_main"
              key="/STAT|0"
              nodeLabel={
                <FilterOption
                  active={false}
                  count={91}
                  displayClass="inline-block"
                  itemKey={0.5}
                  label="Central authority"
                  labelRaw={null}
                  onClick={[MockFunction]}
                  themesItems={null}
                  value="/STAT"
                />
              }
            >
              <TreeView
                defaultCollapsed={true}
                itemClassName=""
                key="/STAT/972417807|0"
                nodeLabel={
                  <FilterOption
                    active={false}
                    count={37}
                    displayClass="inline-block"
                    itemKey={0.5}
                    label={null}
                    labelRaw="Finansdepartementet"
                    onClick={[MockFunction]}
                    themesItems={null}
                    value="/STAT/972417807"
                  />
                }
              >
                <FilterOption
                  active={false}
                  count={36}
                  displayClass=""
                  itemKey={0.5}
                  key="/STAT/972417807/974761076|0"
                  label={null}
                  labelRaw="Skatteetaten"
                  onClick={[MockFunction]}
                  themesItems={null}
                  value="/STAT/972417807/974761076"
                />
                <FilterOption
                  active={false}
                  count={1}
                  displayClass=""
                  itemKey={0.5}
                  key="/STAT/972417807/971526920|1"
                  label={null}
                  labelRaw="Ssb"
                  onClick={[MockFunction]}
                  themesItems={null}
                  value="/STAT/972417807/971526920"
                />
              </TreeView>
              <TreeView
                defaultCollapsed={true}
                itemClassName=""
                key="/STAT/912660680|1"
                nodeLabel={
                  <FilterOption
                    active={false}
                    count={28}
                    displayClass="inline-block"
                    itemKey={0.5}
                    label={null}
                    labelRaw="Nærings- og fiskeridepartementet"
                    onClick={[MockFunction]}
                    themesItems={null}
                    value="/STAT/912660680"
                  />
                }
              >
                <FilterOption
                  active={false}
                  count={27}
                  displayClass=""
                  itemKey={0.5}
                  key="/STAT/912660680/974760673|0"
                  label={null}
                  labelRaw="Brønnøysundregistrene"
                  onClick={[MockFunction]}
                  themesItems={null}
                  value="/STAT/912660680/974760673"
                />
                <FilterOption
                  active={false}
                  count={1}
                  displayClass=""
                  itemKey={0.5}
                  key="/STAT/912660680/971526157|1"
                  label={null}
                  labelRaw="Patentstyret"
                  onClick={[MockFunction]}
                  themesItems={null}
                  value="/STAT/912660680/971526157"
                />
              </TreeView>
              <TreeView
                defaultCollapsed={true}
                itemClassName=""
                key="/STAT/872417842|2"
                nodeLabel={
                  <FilterOption
                    active={false}
                    count={9}
                    displayClass="inline-block"
                    itemKey={0.5}
                    label={null}
                    labelRaw="Kunnskapsdepartementet"
                    onClick={[MockFunction]}
                    themesItems={null}
                    value="/STAT/872417842"
                  />
                }
              >
                <FilterOption
                  active={false}
                  count={8}
                  displayClass=""
                  itemKey={0.5}
                  key="/STAT/872417842/960885406|0"
                  label={null}
                  labelRaw="Statens lånekasse for utdanning"
                  onClick={[MockFunction]}
                  themesItems={null}
                  value="/STAT/872417842/960885406"
                />
                <FilterOption
                  active={false}
                  count={1}
                  displayClass=""
                  itemKey={0.5}
                  key="/STAT/872417842/970018131|1"
                  label={null}
                  labelRaw="Utdanningsdirektoratet"
                  onClick={[MockFunction]}
                  themesItems={null}
                  value="/STAT/872417842/970018131"
                />
              </TreeView>
              <TreeView
                defaultCollapsed={true}
                itemClassName=""
                key="/STAT/983887406|3"
                nodeLabel={
                  <FilterOption
                    active={false}
                    count={9}
                    displayClass="inline-block"
                    itemKey={0.5}
                    label={null}
                    labelRaw="Helse- og omsorgsdepartementet"
                    onClick={[MockFunction]}
                    themesItems={null}
                    value="/STAT/983887406"
                  />
                }
              >
                <FilterOption
                  active={false}
                  count={8}
                  displayClass=""
                  itemKey={0.5}
                  key="/STAT/983887406/915933149|0"
                  label={null}
                  labelRaw="Direktoratet for e-helse"
                  onClick={[MockFunction]}
                  themesItems={null}
                  value="/STAT/983887406/915933149"
                />
                <FilterOption
                  active={false}
                  count={1}
                  displayClass=""
                  itemKey={0.5}
                  key="/STAT/983887406/983544622|1"
                  label={null}
                  labelRaw="Helsedirektoratet"
                  onClick={[MockFunction]}
                  themesItems={null}
                  value="/STAT/983887406/983544622"
                />
              </TreeView>
              <TreeView
                defaultCollapsed={true}
                itemClassName=""
                key="/STAT/983887457|4"
                nodeLabel={
                  <FilterOption
                    active={false}
                    count={4}
                    displayClass="inline-block"
                    itemKey={0.5}
                    label={null}
                    labelRaw="Arbeids- og sosialdepartementet"
                    onClick={[MockFunction]}
                    themesItems={null}
                    value="/STAT/983887457"
                  />
                }
              >
                <FilterOption
                  active={false}
                  count={4}
                  displayClass=""
                  itemKey={0.5}
                  key="/STAT/983887457/889640782|0"
                  label={null}
                  labelRaw="Nav"
                  onClick={[MockFunction]}
                  themesItems={null}
                  value="/STAT/983887457/889640782"
                />
              </TreeView>
              <TreeView
                defaultCollapsed={true}
                itemClassName=""
                key="/STAT/972417874|5"
                nodeLabel={
                  <FilterOption
                    active={false}
                    count={2}
                    displayClass="inline-block"
                    itemKey={0.5}
                    label={null}
                    labelRaw="Landbruks- og matdepartementet"
                    onClick={[MockFunction]}
                    themesItems={null}
                    value="/STAT/972417874"
                  />
                }
              >
                <FilterOption
                  active={false}
                  count={2}
                  displayClass=""
                  itemKey={0.5}
                  key="/STAT/972417874/985399077|0"
                  label={null}
                  labelRaw="Mattilsynet"
                  onClick={[MockFunction]}
                  themesItems={null}
                  value="/STAT/972417874/985399077"
                />
              </TreeView>
              <TreeView
                defaultCollapsed={true}
                itemClassName=""
                key="/STAT/972417858|6"
                nodeLabel={
                  <FilterOption
                    active={false}
                    count={1}
                    displayClass="inline-block"
                    itemKey={0.5}
                    label={null}
                    labelRaw="Kommunal- og moderniserings- departementet"
                    onClick={[MockFunction]}
                    themesItems={null}
                    value="/STAT/972417858"
                  />
                }
              >
                <FilterOption
                  active={false}
                  count={1}
                  displayClass=""
                  itemKey={0.5}
                  key="/STAT/972417858/991825827|0"
                  label={null}
                  labelRaw="Difi"
                  onClick={[MockFunction]}
                  themesItems={null}
                  value="/STAT/972417858/991825827"
                />
              </TreeView>
              <TreeView
                defaultCollapsed={true}
                itemClassName=""
                key="/STAT/972417866|7"
                nodeLabel={
                  <FilterOption
                    active={false}
                    count={1}
                    displayClass="inline-block"
                    itemKey={0.5}
                    label={null}
                    labelRaw="Kulturdepartementet"
                    onClick={[MockFunction]}
                    themesItems={null}
                    value="/STAT/972417866"
                  />
                }
              >
                <FilterOption
                  active={false}
                  count={1}
                  displayClass=""
                  itemKey={0.5}
                  key="/STAT/972417866/961181399|0"
                  label={null}
                  labelRaw="Arkivverket"
                  onClick={[MockFunction]}
                  themesItems={null}
                  value="/STAT/972417866/961181399"
                />
              </TreeView>
            </TreeView>
          </div>
          <div
            className="section"
            key="panel1"
          >
            <TreeView
              defaultCollapsed={false}
              itemClassName="tree-view_main"
              key="/KOMMUNE|1"
              nodeLabel={
                <FilterOption
                  active={false}
                  count={37}
                  displayClass="inline-block"
                  itemKey={0.5}
                  label="Municipality"
                  labelRaw={null}
                  onClick={[MockFunction]}
                  themesItems={null}
                  value="/KOMMUNE"
                />
              }
            >
              <TreeView
                defaultCollapsed={false}
                itemClassName=""
                key="/KOMMUNE/958935420|0"
                nodeLabel={
                  <FilterOption
                    active={false}
                    count={37}
                    displayClass="inline-block"
                    itemKey={0.5}
                    label={null}
                    labelRaw="Oslo kommune"
                    onClick={[MockFunction]}
                    themesItems={null}
                    value="/KOMMUNE/958935420"
                  />
                }
              >
                <TreeView
                  defaultCollapsed={true}
                  itemClassName=""
                  key="/KOMMUNE/958935420/974770482|0"
                  nodeLabel={
                    <FilterOption
                      active={true}
                      count={22}
                      displayClass="inline-block"
                      itemKey={0.5}
                      label={null}
                      labelRaw="Oslo kommune byrådsavdeling for byutvikling"
                      onClick={[MockFunction]}
                      themesItems={null}
                      value="/KOMMUNE/958935420/974770482"
                    />
                  }
                >
                  <FilterOption
                    active={false}
                    count={22}
                    displayClass=""
                    itemKey={0.5}
                    key="/KOMMUNE/958935420/974770482/971040823|0"
                    label={null}
                    labelRaw="Oslo kommune plan- og bygningsetaten"
                    onClick={[MockFunction]}
                    themesItems={null}
                    value="/KOMMUNE/958935420/974770482/971040823"
                  />
                </TreeView>
                <TreeView
                  defaultCollapsed={true}
                  itemClassName=""
                  key="/KOMMUNE/958935420/974770474|1"
                  nodeLabel={
                    <FilterOption
                      active={false}
                      count={10}
                      displayClass="inline-block"
                      itemKey={0.5}
                      label={null}
                      labelRaw="Oslo kommune byrådsavdeling for miljø og samferdsel"
                      onClick={[MockFunction]}
                      themesItems={null}
                      value="/KOMMUNE/958935420/974770474"
                    />
                  }
                >
                  <FilterOption
                    active={false}
                    count={8}
                    displayClass=""
                    itemKey={0.5}
                    key="/KOMMUNE/958935420/974770474/996922766|0"
                    label={null}
                    labelRaw="Oslo kommune bymiljøetaten"
                    onClick={[MockFunction]}
                    themesItems={null}
                    value="/KOMMUNE/958935420/974770474/996922766"
                  />
                  <FilterOption
                    active={false}
                    count={2}
                    displayClass=""
                    itemKey={0.5}
                    key="/KOMMUNE/958935420/974770474/976820088|1"
                    label={null}
                    labelRaw="Oslo kommune renovasjonsetaten"
                    onClick={[MockFunction]}
                    themesItems={null}
                    value="/KOMMUNE/958935420/974770474/976820088"
                  />
                </TreeView>
              </TreeView>
            </TreeView>
          </div>
          <div
            className="section"
            key="panel2"
          >
            <TreeView
              defaultCollapsed={true}
              itemClassName="tree-view_main"
              key="/PRIVAT|2"
              nodeLabel={
                <FilterOption
                  active={false}
                  count={2}
                  displayClass="inline-block"
                  itemKey={0.5}
                  label="/PRIVAT"
                  labelRaw={null}
                  onClick={[MockFunction]}
                  themesItems={null}
                  value="/PRIVAT"
                />
              }
            >
              <FilterOption
                active={false}
                count={1}
                displayClass=""
                itemKey={0.5}
                key="/PRIVAT/985821585|0"
                label={null}
                labelRaw="Uninett norid as"
                onClick={[MockFunction]}
                themesItems={null}
                value="/PRIVAT/985821585"
              />
              <FilterOption
                active={false}
                count={1}
                displayClass=""
                itemKey={0.5}
                key="/PRIVAT/991609407|1"
                label={null}
                labelRaw="Ruter as"
                onClick={[MockFunction]}
                themesItems={null}
                value="/PRIVAT/991609407"
              />
            </TreeView>
          </div>
          <div
            className="section"
            key="panel3"
          >
            <TreeView
              defaultCollapsed={true}
              itemClassName="tree-view_main"
              key="/ANNET|3"
              nodeLabel={
                <FilterOption
                  active={false}
                  count={1}
                  displayClass="inline-block"
                  itemKey={0.5}
                  label="Other"
                  labelRaw={null}
                  onClick={[MockFunction]}
                  themesItems={null}
                  value="/ANNET"
                />
              }
            >
              <FilterOption
                active={false}
                count={1}
                displayClass=""
                itemKey={0.5}
                key="/ANNET/910244132|0"
                label={null}
                labelRaw="Ramsund og rognan revisjon"
                onClick={[MockFunction]}
                themesItems={null}
                value="/ANNET/910244132"
              />
            </TreeView>
          </div>
        </div>
      </div>
    </div>
  </Collapse>
</div>
`;

exports[`should render SearchPublishersTree correctly with minimum of props 1`] = `
<div
  className="search-filter-publisher"
>
  <div
    className="fdk-panel__header"
  >
    <button
      className="fdk-publisher-toggle fdk-p-0"
      onClick={[Function]}
    >
      <i
        className="fa mr-2 fa-angle-up"
      />
      <span />
    </button>
  </div>
  <Collapse
    appear={false}
    enter={true}
    exit={true}
    in={false}
    isOpen={true}
    mountOnEnter={false}
    onEnter={[Function]}
    onEntered={[Function]}
    onEntering={[Function]}
    onExit={[Function]}
    onExited={[Function]}
    onExiting={[Function]}
    tag="div"
    timeout={350}
    unmountOnExit={false}
  >
    <div
      className="fdk-panel__content"
    >
      <div
        className="fdk-items-list"
      />
    </div>
  </Collapse>
</div>
`;

exports[`should render SearchPublishersTree correctly with props 1`] = `
<div
  className="search-filter-publisher"
>
  <div
    className="fdk-panel__header"
  >
    <button
      className="fdk-publisher-toggle fdk-p-0"
      onClick={[Function]}
    >
      <i
        className="fa mr-2 fa-angle-up"
      />
      <span>
        title
      </span>
    </button>
  </div>
  <Collapse
    appear={false}
    enter={true}
    exit={true}
    in={false}
    isOpen={true}
    mountOnEnter={false}
    onEnter={[Function]}
    onEntered={[Function]}
    onEntering={[Function]}
    onExit={[Function]}
    onExited={[Function]}
    onExiting={[Function]}
    tag="div"
    timeout={350}
    unmountOnExit={false}
  >
    <div
      className="fdk-panel__content"
    >
      <div
        className="fdk-items-list"
      >
        <div>
          <div
            className="section"
            key="panel0"
          >
            <TreeView
              defaultCollapsed={true}
              itemClassName="tree-view_main"
              key="/STAT|0"
              nodeLabel={
                <FilterOption
                  active={false}
                  count={91}
                  displayClass="inline-block"
                  itemKey={0.5}
                  label="Central authority"
                  labelRaw={null}
                  onClick={[MockFunction]}
                  themesItems={null}
                  value="/STAT"
                />
              }
            >
              <TreeView
                defaultCollapsed={true}
                itemClassName=""
                key="/STAT/972417807|0"
                nodeLabel={
                  <FilterOption
                    active={false}
                    count={37}
                    displayClass="inline-block"
                    itemKey={0.5}
                    label={null}
                    labelRaw="Finansdepartementet"
                    onClick={[MockFunction]}
                    themesItems={null}
                    value="/STAT/972417807"
                  />
                }
              >
                <FilterOption
                  active={false}
                  count={36}
                  displayClass=""
                  itemKey={0.5}
                  key="/STAT/972417807/974761076|0"
                  label={null}
                  labelRaw="Skatteetaten"
                  onClick={[MockFunction]}
                  themesItems={null}
                  value="/STAT/972417807/974761076"
                />
                <FilterOption
                  active={false}
                  count={1}
                  displayClass=""
                  itemKey={0.5}
                  key="/STAT/972417807/971526920|1"
                  label={null}
                  labelRaw="Ssb"
                  onClick={[MockFunction]}
                  themesItems={null}
                  value="/STAT/972417807/971526920"
                />
              </TreeView>
              <TreeView
                defaultCollapsed={true}
                itemClassName=""
                key="/STAT/912660680|1"
                nodeLabel={
                  <FilterOption
                    active={false}
                    count={28}
                    displayClass="inline-block"
                    itemKey={0.5}
                    label={null}
                    labelRaw="Nærings- og fiskeridepartementet"
                    onClick={[MockFunction]}
                    themesItems={null}
                    value="/STAT/912660680"
                  />
                }
              >
                <FilterOption
                  active={false}
                  count={27}
                  displayClass=""
                  itemKey={0.5}
                  key="/STAT/912660680/974760673|0"
                  label={null}
                  labelRaw="Brønnøysundregistrene"
                  onClick={[MockFunction]}
                  themesItems={null}
                  value="/STAT/912660680/974760673"
                />
                <FilterOption
                  active={false}
                  count={1}
                  displayClass=""
                  itemKey={0.5}
                  key="/STAT/912660680/971526157|1"
                  label={null}
                  labelRaw="Patentstyret"
                  onClick={[MockFunction]}
                  themesItems={null}
                  value="/STAT/912660680/971526157"
                />
              </TreeView>
              <TreeView
                defaultCollapsed={true}
                itemClassName=""
                key="/STAT/872417842|2"
                nodeLabel={
                  <FilterOption
                    active={false}
                    count={9}
                    displayClass="inline-block"
                    itemKey={0.5}
                    label={null}
                    labelRaw="Kunnskapsdepartementet"
                    onClick={[MockFunction]}
                    themesItems={null}
                    value="/STAT/872417842"
                  />
                }
              >
                <FilterOption
                  active={false}
                  count={8}
                  displayClass=""
                  itemKey={0.5}
                  key="/STAT/872417842/960885406|0"
                  label={null}
                  labelRaw="Statens lånekasse for utdanning"
                  onClick={[MockFunction]}
                  themesItems={null}
                  value="/STAT/872417842/960885406"
                />
                <FilterOption
                  active={false}
                  count={1}
                  displayClass=""
                  itemKey={0.5}
                  key="/STAT/872417842/970018131|1"
                  label={null}
                  labelRaw="Utdanningsdirektoratet"
                  onClick={[MockFunction]}
                  themesItems={null}
                  value="/STAT/872417842/970018131"
                />
              </TreeView>
              <TreeView
                defaultCollapsed={true}
                itemClassName=""
                key="/STAT/983887406|3"
                nodeLabel={
                  <FilterOption
                    active={false}
                    count={9}
                    displayClass="inline-block"
                    itemKey={0.5}
                    label={null}
                    labelRaw="Helse- og omsorgsdepartementet"
                    onClick={[MockFunction]}
                    themesItems={null}
                    value="/STAT/983887406"
                  />
                }
              >
                <FilterOption
                  active={false}
                  count={8}
                  displayClass=""
                  itemKey={0.5}
                  key="/STAT/983887406/915933149|0"
                  label={null}
                  labelRaw="Direktoratet for e-helse"
                  onClick={[MockFunction]}
                  themesItems={null}
                  value="/STAT/983887406/915933149"
                />
                <FilterOption
                  active={false}
                  count={1}
                  displayClass=""
                  itemKey={0.5}
                  key="/STAT/983887406/983544622|1"
                  label={null}
                  labelRaw="Helsedirektoratet"
                  onClick={[MockFunction]}
                  themesItems={null}
                  value="/STAT/983887406/983544622"
                />
              </TreeView>
              <TreeView
                defaultCollapsed={true}
                itemClassName=""
                key="/STAT/983887457|4"
                nodeLabel={
                  <FilterOption
                    active={false}
                    count={4}
                    displayClass="inline-block"
                    itemKey={0.5}
                    label={null}
                    labelRaw="Arbeids- og sosialdepartementet"
                    onClick={[MockFunction]}
                    themesItems={null}
                    value="/STAT/983887457"
                  />
                }
              >
                <FilterOption
                  active={false}
                  count={4}
                  displayClass=""
                  itemKey={0.5}
                  key="/STAT/983887457/889640782|0"
                  label={null}
                  labelRaw="Nav"
                  onClick={[MockFunction]}
                  themesItems={null}
                  value="/STAT/983887457/889640782"
                />
              </TreeView>
              <TreeView
                defaultCollapsed={true}
                itemClassName=""
                key="/STAT/972417874|5"
                nodeLabel={
                  <FilterOption
                    active={false}
                    count={2}
                    displayClass="inline-block"
                    itemKey={0.5}
                    label={null}
                    labelRaw="Landbruks- og matdepartementet"
                    onClick={[MockFunction]}
                    themesItems={null}
                    value="/STAT/972417874"
                  />
                }
              >
                <FilterOption
                  active={false}
                  count={2}
                  displayClass=""
                  itemKey={0.5}
                  key="/STAT/972417874/985399077|0"
                  label={null}
                  labelRaw="Mattilsynet"
                  onClick={[MockFunction]}
                  themesItems={null}
                  value="/STAT/972417874/985399077"
                />
              </TreeView>
              <TreeView
                defaultCollapsed={true}
                itemClassName=""
                key="/STAT/972417858|6"
                nodeLabel={
                  <FilterOption
                    active={false}
                    count={1}
                    displayClass="inline-block"
                    itemKey={0.5}
                    label={null}
                    labelRaw="Kommunal- og moderniserings- departementet"
                    onClick={[MockFunction]}
                    themesItems={null}
                    value="/STAT/972417858"
                  />
                }
              >
                <FilterOption
                  active={false}
                  count={1}
                  displayClass=""
                  itemKey={0.5}
                  key="/STAT/972417858/991825827|0"
                  label={null}
                  labelRaw="Difi"
                  onClick={[MockFunction]}
                  themesItems={null}
                  value="/STAT/972417858/991825827"
                />
              </TreeView>
              <TreeView
                defaultCollapsed={true}
                itemClassName=""
                key="/STAT/972417866|7"
                nodeLabel={
                  <FilterOption
                    active={false}
                    count={1}
                    displayClass="inline-block"
                    itemKey={0.5}
                    label={null}
                    labelRaw="Kulturdepartementet"
                    onClick={[MockFunction]}
                    themesItems={null}
                    value="/STAT/972417866"
                  />
                }
              >
                <FilterOption
                  active={false}
                  count={1}
                  displayClass=""
                  itemKey={0.5}
                  key="/STAT/972417866/961181399|0"
                  label={null}
                  labelRaw="Arkivverket"
                  onClick={[MockFunction]}
                  themesItems={null}
                  value="/STAT/972417866/961181399"
                />
              </TreeView>
            </TreeView>
          </div>
          <div
            className="section"
            key="panel1"
          >
            <TreeView
              defaultCollapsed={true}
              itemClassName="tree-view_main"
              key="/KOMMUNE|1"
              nodeLabel={
                <FilterOption
                  active={false}
                  count={37}
                  displayClass="inline-block"
                  itemKey={0.5}
                  label="Municipality"
                  labelRaw={null}
                  onClick={[MockFunction]}
                  themesItems={null}
                  value="/KOMMUNE"
                />
              }
            >
              <TreeView
                defaultCollapsed={true}
                itemClassName=""
                key="/KOMMUNE/958935420|0"
                nodeLabel={
                  <FilterOption
                    active={false}
                    count={37}
                    displayClass="inline-block"
                    itemKey={0.5}
                    label={null}
                    labelRaw="Oslo kommune"
                    onClick={[MockFunction]}
                    themesItems={null}
                    value="/KOMMUNE/958935420"
                  />
                }
              >
                <TreeView
                  defaultCollapsed={true}
                  itemClassName=""
                  key="/KOMMUNE/958935420/974770482|0"
                  nodeLabel={
                    <FilterOption
                      active={false}
                      count={22}
                      displayClass="inline-block"
                      itemKey={0.5}
                      label={null}
                      labelRaw="Oslo kommune byrådsavdeling for byutvikling"
                      onClick={[MockFunction]}
                      themesItems={null}
                      value="/KOMMUNE/958935420/974770482"
                    />
                  }
                >
                  <FilterOption
                    active={false}
                    count={22}
                    displayClass=""
                    itemKey={0.5}
                    key="/KOMMUNE/958935420/974770482/971040823|0"
                    label={null}
                    labelRaw="Oslo kommune plan- og bygningsetaten"
                    onClick={[MockFunction]}
                    themesItems={null}
                    value="/KOMMUNE/958935420/974770482/971040823"
                  />
                </TreeView>
                <TreeView
                  defaultCollapsed={true}
                  itemClassName=""
                  key="/KOMMUNE/958935420/974770474|1"
                  nodeLabel={
                    <FilterOption
                      active={false}
                      count={10}
                      displayClass="inline-block"
                      itemKey={0.5}
                      label={null}
                      labelRaw="Oslo kommune byrådsavdeling for miljø og samferdsel"
                      onClick={[MockFunction]}
                      themesItems={null}
                      value="/KOMMUNE/958935420/974770474"
                    />
                  }
                >
                  <FilterOption
                    active={false}
                    count={8}
                    displayClass=""
                    itemKey={0.5}
                    key="/KOMMUNE/958935420/974770474/996922766|0"
                    label={null}
                    labelRaw="Oslo kommune bymiljøetaten"
                    onClick={[MockFunction]}
                    themesItems={null}
                    value="/KOMMUNE/958935420/974770474/996922766"
                  />
                  <FilterOption
                    active={false}
                    count={2}
                    displayClass=""
                    itemKey={0.5}
                    key="/KOMMUNE/958935420/974770474/976820088|1"
                    label={null}
                    labelRaw="Oslo kommune renovasjonsetaten"
                    onClick={[MockFunction]}
                    themesItems={null}
                    value="/KOMMUNE/958935420/974770474/976820088"
                  />
                </TreeView>
              </TreeView>
            </TreeView>
          </div>
          <div
            className="section"
            key="panel2"
          >
            <TreeView
              defaultCollapsed={true}
              itemClassName="tree-view_main"
              key="/PRIVAT|2"
              nodeLabel={
                <FilterOption
                  active={false}
                  count={2}
                  displayClass="inline-block"
                  itemKey={0.5}
                  label="/PRIVAT"
                  labelRaw={null}
                  onClick={[MockFunction]}
                  themesItems={null}
                  value="/PRIVAT"
                />
              }
            >
              <FilterOption
                active={false}
                count={1}
                displayClass=""
                itemKey={0.5}
                key="/PRIVAT/985821585|0"
                label={null}
                labelRaw="Uninett norid as"
                onClick={[MockFunction]}
                themesItems={null}
                value="/PRIVAT/985821585"
              />
              <FilterOption
                active={false}
                count={1}
                displayClass=""
                itemKey={0.5}
                key="/PRIVAT/991609407|1"
                label={null}
                labelRaw="Ruter as"
                onClick={[MockFunction]}
                themesItems={null}
                value="/PRIVAT/991609407"
              />
            </TreeView>
          </div>
          <div
            className="section"
            key="panel3"
          >
            <TreeView
              defaultCollapsed={true}
              itemClassName="tree-view_main"
              key="/ANNET|3"
              nodeLabel={
                <FilterOption
                  active={false}
                  count={1}
                  displayClass="inline-block"
                  itemKey={0.5}
                  label="Other"
                  labelRaw={null}
                  onClick={[MockFunction]}
                  themesItems={null}
                  value="/ANNET"
                />
              }
            >
              <FilterOption
                active={false}
                count={1}
                displayClass=""
                itemKey={0.5}
                key="/ANNET/910244132|0"
                label={null}
                labelRaw="Ramsund og rognan revisjon"
                onClick={[MockFunction]}
                themesItems={null}
                value="/ANNET/910244132"
              />
            </TreeView>
          </div>
        </div>
      </div>
    </div>
  </Collapse>
</div>
`;
